--- a/views/login.ejs
+++ b/views/login.ejs
@@ -77,11 +77,11 @@
             <form action="/admin/login" method="post">
                 <div style="display: flex; align-items: center; margin-bottom: 20px;">
                     <img class="icon" src="./public/images/id.png" alt="search icon" width="40px" height="40px" style="margin-right: 10px;"> <!-- 아이콘 이미지 -->
-                    <input type="username" id="username" name="username" value="<%= admin_id %>" placeholder="관리자 아이디" style="width: 450px; height: 30px; font-size: 20px; border-radius: 10px;" required>
+                    <input type="username" id="username" name="username" value="" placeholder="관리자 아이디" style="width: 450px; height: 30px; font-size: 20px; border-radius: 10px;" required>
                 </div>
                 <div style="display: flex; align-items: center; margin-bottom: 20px;">
                     <img class="icon" src="./public/images/password.png" alt="search icon" width="40px" height="40px" style="margin-right: 10px;"> <!-- 아이콘 이미지 -->
-                    <input type="password" id="password" name="password" value="<%= admin_pw %>" placeholder="관리자 비밀번호" style="width: 450px; height: 30px; font-size: 20px; border-radius: 10px;" required>
+                    <input type="password" id="password" name="password" value="" placeholder="관리자 비밀번호" style="width: 450px; height: 30px; font-size: 20px; border-radius: 10px;" required>
                 </div>
                 <div style="display: flex; justify-content: center; align-items: center; margin-top: 50px; margin-left: 20px;">
                     
