--- a/views/user_list.ejs
+++ b/views/user_list.ejs
@@ -99,7 +99,7 @@
                         onmouseover="this.style.color='black'; this.style.textDecoration='underline'; this.style.textDecorationColor='#FDBBBB'; this.style.textDecoration='none';"
                         onmouseout="this.style.color='gray'; this.style.textDecoration='none';"
                         onfocus="this.style.textDecoration='none';" onblur="this.style.textDecoration='underline'; this.style.textDecorationColor='#FDBBBB';"
-                        class="dropdown-item" href="/admin/feedback/<%= user_list[i].user_id %>">
+                        class="dropdown-item" href="/admin/users/<%= user_list[i].user_id %>">
                         <%= user_list[i].name %>
                     </a>
                 </li>
