--- a/views/feedback_list.ejs
+++ b/views/feedback_list.ejs
@@ -100,7 +100,7 @@
                         onmouseout="this.style.color='gray'; this.style.textDecoration='none';"
                         onfocus="this.style.textDecoration='none';"
                         onblur="this.style.textDecoration='underline'; this.style.textDecorationColor='#FDBBBB';"
-                        class="dropdown-item" href="/admin/users/<%= user_list[i].user_id %>">
+                        class="dropdown-item" href="/admin/feedback/<%= user_list[i].user_id %>">
                         <%= user_list[i].name %>
                     </a>
                 </li>
