--- a/views/user.ejs
+++ b/views/user.ejs
@@ -97,7 +97,7 @@
                         onmouseover="this.style.color='black'; this.style.textDecoration='underline'; this.style.textDecorationColor='#FDBBBB'; this.style.textDecoration='none';"
                         onmouseout="this.style.color='gray'; this.style.textDecoration='none';"
                         onfocus="this.style.textDecoration='none';" onblur="this.style.textDecoration='underline'; this.style.textDecorationColor='#FDBBBB';"
-                        class="dropdown-item" href="/admin/feedback/<%= user_list[i].user_id %>">
+                        class="dropdown-item" href="/admin/users/<%= user_list[i].user_id %>">
                         <%= user_list[i].name %>
                     </a>
                 </li>
@@ -150,7 +150,7 @@
                 </div>
 
                 <div style="display: flex; margin-top: 100px;">
-                    <button type="submit"
+                    <button type="submit" onclick="confirmDelete('<%= user_id %>');"
                         style="align-items: center; width: 350px; height: 40px; font-weight: bold; border-style: solid; border-radius: 30px; border-color: #FDBBBB; border-width: 3px; background-color: rgba(253, 187, 187, 0.4); font-size: 20px; color: black;"
                         onmouseover="this.style.backgroundColor='white'; this.style.color='#FDBBBB';"
                         onmouseout="this.style.backgroundColor='rgba(253, 187, 187, 0.4)'; this.style.color='black';">회원탈퇴</button>
@@ -158,8 +158,28 @@
             </div>
         </div>
     </div>
+    <script>
+        function confirmDelete(user_id) {
+        var confirmation = confirm("정말로 삭제하시겠습니까?");
 
-    </span>
+        if (confirmation) {
+            fetch('/admin/users/' + user_id, {
+                method: 'DELETE'
+            })
+            .then(response => {
+                console.log(response.ok)
+                if (response.ok) {
+                    window.location.href = '/admin/users';
+                } else {
+                    console.error('삭제에 실패했습니다.');
+                }
+            })
+            .catch(error => {
+                console.error('네트워크 오류:', error);
+            });
+        }
+    }
+    </script>
 </body>
 
 </html>
