--- a/views/contents.ejs
+++ b/views/contents.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./public/images/logo.png" sizes="16x16" type="image/png">
+    <link rel="icon" href="/images/logo.png" sizes="16x16" type="image/png">
     <title>주독야독</title>
     <style>
         #nav {
@@ -65,7 +65,7 @@
     <div
         style="width: 100%; height: 30%; background-color: rgba(244, 244, 244, 0.5); padding-top: 10px; padding-bottom: 10px; display: flex; justify-content: space-between; align-items: center;">
         <div style="margin-left: 10px; display: flex; align-items: center;">
-            <img src="./public/images/logo.png" alt="주독야독" width="50dp" height="50dp" style="margin-right: 10px;">
+            <img src="/images/logo.png" alt="주독야독" width="50dp" height="50dp" style="margin-right: 10px;">
             <a class="navbar-brand" href="/admin/"
                 style="text-decoration-line: none; color: black; font-size: 36px; font-weight: bold;"
                 onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';">주독야독</a>
