--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./public/images/logo.png" sizes="16x16" type="image/png">
+    <link rel="icon" href="/images/logo.png" sizes="16x16" type="image/png">
     <title>주독야독</title>
     <style>
         .slide {
@@ -26,7 +26,7 @@
 <body>
     <div style="width: 100%; height: 30%; background-color: rgba(244, 244, 244, 0.5); padding-top: 10px; padding-bottom: 10px;">
         <div style="width: auto; height: auto; display: flex; align-items: center;">
-            <img src="./public/images/logo.png" alt="주독야독" width="50dp" height="50dp" style="margin-left: 10px; margin-right: 10px;">
+            <img src="/images/logo.png" alt="주독야독" width="50dp" height="50dp" style="margin-left: 10px; margin-right: 10px;">
             <a class="navbar-brand" href="/admin/" style="text-decoration-line: none; color: black; font-size: 36px; font-weight: bold;"
             onmouseover="this.style.color='gray';"
             onmouseout="this.style.color='black';">주독야독</a>
@@ -64,10 +64,10 @@
     <div id="slideshow" style="width: 100%; height: fit-content; background-color: #FDBBBB;">
         <!-- 이미지 - 임시 설정 -->
         <div class="slide">
-            <img style="width: 100%; height: fit-content;" src="./public/images/example1.jpg">
+            <img style="width: 100%; height: fit-content;" src="/images/example1.jpg">
         </div>
         <div class="slide">
-            <img style="width: 100%; height: fit-content;" src="./public/images/example2.jpg">
+            <img style="width: 100%; height: fit-content;" src="/images/example2.jpg">
         </div>
         <!-- <div class="slide">
             <h2>세 번째 페이지</h2>
