--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./public/images/logo.png" sizes="16x16" type="image/png">
+    <link rel="icon" href="/images/logo.png" sizes="16x16" type="image/png">
     <title>주독야독</title>
     <style>
         input[type="username"] {
@@ -46,7 +46,7 @@
 <body>
     <div style="width: 100%; height: 30%; background-color: rgba(244, 244, 244, 0.5); padding-top: 10px; padding-bottom: 10px;">
         <div style="width: auto; height: auto; display: flex; align-items: center;">
-            <img src="./public/images/logo.png" alt="주독야독" width="50dp" height="50dp" style="margin-left: 10px; margin-right: 10px;">
+            <img src="/images/logo.png" alt="주독야독" width="50dp" height="50dp" style="margin-left: 10px; margin-right: 10px;">
             <a class="navbar-brand" href="/admin/" style="text-decoration-line: none; color: black; font-size: 36px; font-weight: bold;"
             onmouseover="this.style.color='gray';"
             onmouseout="this.style.color='black';">주독야독</a>
@@ -69,18 +69,18 @@
 
     <div style="width: 100%; height: fit-content; margin-top: 50px;">
         <div style="width: 100%; height: fit-content; display: flex; justify-content: center; align-items: center;">
-            <img src="./public/images/logo.png" style="width: 80px; height: 80px;"> 
+            <img src="/images/logo.png" style="width: 80px; height: 80px;"> 
             <span style="font-size: 70px; font-weight: bold; margin-left: 20px;">주독야독</span>
         </div>
 
         <div style="width: 100%; height: fit-content; display: flex; justify-content: center; align-items: center; margin-top: 50px;">
             <form action="/admin/login" method="post">
                 <div style="display: flex; align-items: center; margin-bottom: 20px;">
-                    <img class="icon" src="./public/images/id.png" alt="search icon" width="40px" height="40px" style="margin-right: 10px;"> <!-- 아이콘 이미지 -->
+                    <img class="icon" src="/images/id.png" alt="search icon" width="40px" height="40px" style="margin-right: 10px;"> <!-- 아이콘 이미지 -->
                     <input type="username" id="username" name="username" value="" placeholder="관리자 아이디" style="width: 450px; height: 30px; font-size: 20px; border-radius: 10px;" required>
                 </div>
                 <div style="display: flex; align-items: center; margin-bottom: 20px;">
-                    <img class="icon" src="./public/images/password.png" alt="search icon" width="40px" height="40px" style="margin-right: 10px;"> <!-- 아이콘 이미지 -->
+                    <img class="icon" src="/images/password.png" alt="search icon" width="40px" height="40px" style="margin-right: 10px;"> <!-- 아이콘 이미지 -->
                     <input type="password" id="password" name="password" value="" placeholder="관리자 비밀번호" style="width: 450px; height: 30px; font-size: 20px; border-radius: 10px;" required>
                 </div>
                 <div style="display: flex; justify-content: center; align-items: center; margin-top: 50px; margin-left: 20px;">
