--- a/views/user.ejs
+++ b/views/user.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./public/images/logo.png" sizes="16x16" type="image/png">
+    <link rel="icon" href="/images/logo.png" sizes="16x16" type="image/png">
     <title>주독야독</title>
     <style>
         #nav {
@@ -51,7 +51,7 @@
     <div
         style="width: 100%; height: 30%; background-color: rgba(244, 244, 244, 0.5); padding-top: 10px; padding-bottom: 10px; display: flex; justify-content: space-between; align-items: center;">
         <div style="display: flex; align-items: center;">
-            <img src="./public/images/logo.png" alt="주독야독" width="50dp" height="50dp" style="margin-right: 10px;">
+            <img src="/images/logo.png" alt="주독야독" width="50dp" height="50dp" style="margin-right: 10px;">
             <a class="navbar-brand" href="/admin/"
                 style="text-decoration-line: none; color: black; font-size: 36px; font-weight: bold;"
                 onmouseover="this.style.color='gray';" onmouseout="this.style.color='black';">주독야독</a>
@@ -108,7 +108,7 @@
     <div id="section">
         <div style="display: flex; align-items: center; justify-content: center; margin-left: 60%;">
             <!-- 이미지 -->
-            <img src="./public/images/person.png"
+            <img src="/images/person.png"
                 style="border-radius: 50%; width: 130px; height: 130px; object-fit: cover;" alt="사용자 프로필 사진">
 
             <!-- 여백 -->
@@ -117,7 +117,7 @@
             <!-- 입력 요소 -->
             <div style="display: flexbox; align-items: center; margin-top: 30px;">
                 <div style="display: flex;">
-                    <img class="icon" src="./public/images/id.png" alt="search icon" width="40px" height="40px"
+                    <img class="icon" src="/images/id.png" alt="search icon" width="40px" height="40px"
                         style="margin-right: 20px;">
                     <input type="username" value="<%= user_name %>" id="username" name="username" placeholder="사용자 이름"
                         style="width: 600px; height: 40px; font-size: 20px; border-radius: 10px; border-style: solid; border-color: black;"
@@ -125,7 +125,7 @@
                 </div>
 
                 <div style="display: flex; margin-top: 50px;">
-                    <img class="icon" src="./public/images/email.png" alt="search icon" width="40px" height="40px"
+                    <img class="icon" src="/images/email.png" alt="search icon" width="40px" height="40px"
                         style="margin-right: 20px;">
                     <input type="email" value="<%= user_email %>" id="useremail" name="useremail" placeholder="사용자 이메일"
                         style="width: 600px; height: 40px; font-size: 20px; border-radius: 10px; border-style: solid; border-color: black;"
@@ -133,7 +133,7 @@
                 </div>
 
                 <div style="display: flex; margin-top: 50px;">
-                    <img class="icon" src="./public/images/phone.png" alt="search icon" width="40px" height="40px"
+                    <img class="icon" src="/images/phone.png" alt="search icon" width="40px" height="40px"
                         style="margin-right: 20px;">
                     <input type="tel" value="<%= user_phone %>" id="userphone" name="userphone" placeholder="사용자 전화번호"
                         style="width: 600px; height: 40px; font-size: 20px; border-radius: 10px; border-style: solid; border-color: black;"
@@ -142,7 +142,7 @@
 
                 <!-- 수능 디데이 변수 추가 필요 -->
                 <div style="display: flex; margin-top: 50px;">
-                    <img class="icon" src="./public/images/dday.png" alt="search icon" width="40px" height="40px"
+                    <img class="icon" src="/images/dday.png" alt="search icon" width="40px" height="40px"
                         style="margin-right: 20px;">
                     <input type="text" value="<%= user_d_day %>" id="userdday" name="userdday" placeholder="수능 디데이"
                         style="width: 600px; height: 40px; font-size: 20px; border-radius: 10px; border-style: solid; border-color: black;"
