Refactor: user table 변경에 따른 코드 수정

--- a/views/user.ejs
+++ b/views/user.ejs
@@ -133,14 +133,13 @@
                 </div>
 
                 <div style="display: flex; margin-top: 50px;">
-                    <img class="icon" src="/images/phone.png" alt="search icon" width="40px" height="40px"
+                    <img class="icon" src="/images/dday.png" alt="search icon" width="40px" height="40px"
                         style="margin-right: 20px;">
-                    <input type="tel" value="<%= user_phone %>" id="userphone" name="userphone" placeholder="사용자 전화번호"
+                    <input type="text" value="<%= user_createdAt %>" id="usercreatedAt" name="usercreatedAt" placeholder="사용자 가입일"
                         style="width: 600px; height: 40px; font-size: 20px; border-radius: 10px; border-style: solid; border-color: black;"
                         disabled>
                 </div>
 
-                <!-- 수능 디데이 변수 추가 필요 -->
                 <div style="display: flex; margin-top: 50px;">
                     <img class="icon" src="/images/dday.png" alt="search icon" width="40px" height="40px"
                         style="margin-right: 20px;">
