--- a/views/ai_answer.ejs
+++ b/views/ai_answer.ejs
@@ -138,7 +138,7 @@
             </div>
 
             <span style="font-size: 18px; font-weight: normal; text-align: start;">
-                <%= answer %>
+                <%- answer.replace(/\n/g, '<br>') %>
             </span>
         </div>
     </div>
