--- a/views/contents.ejs
+++ b/views/contents.ejs
@@ -105,7 +105,7 @@
     </div>
 
     <div id="nav">
-        <ul style="padding: 0;">
+        <ul style="padding: 0; height: 90vh; overflow-y: auto;">
             <% for (var i=0; i < text_list.length; i++) { %>
                 <li style="list-style-type: none; margin: 10px; padding: 30px; background-color: white; border-radius: 30px; border-color: #FDBBBB; border-width: 3px; border-style: solid;"
                     onmouseover="this.style.backgroundColor='rgba(253, 187, 187, 0.4)';"
