--- a/views/user.ejs
+++ b/views/user.ejs
@@ -90,7 +90,7 @@
     </div>
 
     <div id="nav">
-        <ul style="padding: 0;">
+        <ul style="padding: 0; height: 90vh; overflow-y: auto;">
             <% for (var i = 0; i < user_list.length; i++) { %>
                 <li>
                     <a style="text-decoration-line: none; color: gray; font-size: 25px; font-weight: bold;"
