--- a/views/contents.ejs
+++ b/views/contents.ejs
@@ -27,7 +27,7 @@
             margin-right: 40px;
             margin-top: 15px;
             flex: 1;
-            overflow-x: auto;
+            overflow-x: hidden;
             /* 가로 스크롤 제어 */
             overflow-y: auto;
             /* 수직 스크롤 유지 */
@@ -130,7 +130,7 @@
 
     <div id="section">
         <div style="display: flex; align-items: start; justify-content: start;">
-            <pre style=" font-size: 20px; line-height: 1.5; word-break: normal;"><%= text_contents %></pre>
+            <pre style=" font-size: 20px; line-height: 1.5; word-break: normal; white-space: pre-wrap;"><%= text_contents %></pre>
         </div>
 
         <!-- 여백 -->
