--- a/views/feedback.ejs
+++ b/views/feedback.ejs
@@ -26,6 +26,13 @@
             margin-left: 20px;
         }
 
+        #feedback_box {
+            display: flex;
+            flex-direction : column;
+            align-items: center;
+            justify-content : center;
+        }
+
         li {
             list-style-type: none;
             margin: 10px;
@@ -106,6 +113,7 @@
                 <% } %>
         </ul>
     </div>
+    <div id="feedback_box">
     <% if(feedback_list) { %>
         <div id="section">
             <p style="font-size: 40px; font-weight: bold;"> 앱 피드백 </p>
@@ -122,7 +130,6 @@
     </div>
     <% } %>
 
-    <br><br>
     <% if(quizfeedback_list) { %>
         <div id="section">
             <p style="font-size: 40px; font-weight: bold;"> 퀴즈 피드백 </p>
@@ -133,18 +140,30 @@
                     <span style="font-size: 20px; font-weight: bold; text-align: center;">작성일: <%= quizfeedback_list[i].createdAt.getFullYear() %>-<%= quizfeedback_list[i].createdAt.getMonth()+1 %>-<%= quizfeedback_list[i].createdAt.getDate() %></span>
                 </div>
                 <details>
-                    <summary style="font-size: 18px; font-weight: normal;">퀴즈 <%= quizfeedback_list[i].quiz_id %> 내용 확인</summary>
+                    <summary style="font-size: 18px; font-weight: normal;">퀴즈 <%= quizfeedback_list[i].quiz_id %></summary>
+                    <% let questions = quizfeedback_list[i].questions; %>
+                    <% questions = JSON.parse(questions); %>
+                    <% let answers = quizfeedback_list[i].answers; %>
+                    <% answers = JSON.parse(answers); %>
+                    <% a = [answers.answer_list1, answers.answer_list2, answers.answer_list3]; %>
                     <div style="font-size: 18px; font-weight: normal; text-align: start;">
-                        문제: 
+                        <% for (let j = 0; j < questions.length; j++) { %>
+                            문제 <%= j+1 %>: <%= questions[j] %>
+                            <br>
+                            <% for (let k = 0; k < 5; k++) { %>
+                            보기 <%= k + 1 %>: <%= a[j][k] %><br>
+                            <% } %>
+                            <br>
+                        <% } %>
                     </div>
                 </details>
+                <br>
                 <span style="font-size: 18px; font-weight: normal; text-align: start;"><%= quizfeedback_list[i].contents %></span>
             </div>
             <% } %>
     </div>
     <% } %>
-
-    </span>
+</div>
 </body>
 
 </html>
