--- a/views/contents.ejs
+++ b/views/contents.ejs
@@ -56,7 +56,7 @@
             font-family: 'neo', !important;
             margin: 0;
             padding: 0;
-            overflow: hidden;
+            overflow: scroll;
         }
     </style>
 </head>
