--- a/views/feedback.ejs
+++ b/views/feedback.ejs
@@ -54,6 +54,7 @@
 
         body {
             font-family: 'dongle', Arial, sans-serif;
+            overflow: scroll;
         }
     </style>
 </head>
