--- a/views/home.ejs
+++ b/views/home.ejs
@@ -19,7 +19,7 @@
             font-family: 'neo', !important;
             margin: 0;
             padding: 0;
-            overflow: hidden;
+            overflow: scroll;
         }
     </style>
 </head>
@@ -41,25 +41,12 @@
             onmouseover="this.style.backgroundColor='#FDBBBB'; this.style.color='black';"
             onmouseout="this.style.backgroundColor='white'; this.style.color='black';">로그인</button>
             <span style="margin: 0 10px;"></span>
-            <button style="border-style: solid; font-size: 20px; color: white; font-weight: bold; background-color: black; border-width: 2px; border-color: white; border-radius: 30px; width: 111px; height: 45px;"
+            <a href="./주독야독.zip" download>
+                <button type="button" style="border-style: solid; font-size: 20px; color: white; font-weight: bold; background-color: black; border-width: 2px; border-color: white; border-radius: 30px; width: 111px; height: 45px;"
             onmouseover="this.style.backgroundColor='#FDBBBB'; this.style.color='white';"
             onmouseout="this.style.backgroundColor='black'; this.style.color='white';">앱 다운로드</button>
+            </a>
         </div>
-        <!--
-        <div style="width: auto; height: auto; display: flex; align-items: center; margin: 3px;">
-            <a class="navbar-brand" href="/admin/terms" style="text-decoration-line: none; color: black; font-size: 18px; font-weight: bold;"
-            onmouseover="this.style.color='gray';"
-            onmouseout="this.style.color='black';">이용약관</a>
-            <span style="margin: 0 10px;"></span>
-            <a class="navbar-brand" href="/admin/infomation" style="text-decoration-line: none; color: black; font-size: 18px; font-weight: bold;"
-            onmouseover="this.style.color='gray';"
-            onmouseout="this.style.color='black';">이용안내</a>
-            <span style="margin: 0 10px;"></span>
-            <a class="navbar-brand" href="/admin/personal" style="text-decoration-line: none; color: black; font-size: 18px; font-weight: bold;"
-            onmouseover="this.style.color='gray';"
-            onmouseout="this.style.color='black';">개인정보 취급방침</a>
-        </div>
-        -->
     </div>
 
     <div id="slideshow" style="width: 100%; height: fit-content; background-color: #FDBBBB;">
