--- a/views/login.ejs
+++ b/views/login.ejs
@@ -39,7 +39,7 @@
             font-family: 'neo', !important;
             margin: 0;
             padding: 0;
-            overflow: hidden;
+            overflow: scroll;
         }
     </style>
 </head>
