--- a/views/home.ejs
+++ b/views/home.ejs
@@ -52,14 +52,17 @@
     <div id="slideshow" style="width: 100%; height: fit-content; background-color: #FDBBBB;">
         <!-- 이미지 - 임시 설정 -->
         <div class="slide">
-            <img style="width: 100%; height: fit-content;" src="/images/example1.jpg">
+            <img style="width: 100%; height: fit-content;" src="/images/main1.png">
         </div>
         <div class="slide">
-            <img style="width: 100%; height: fit-content;" src="/images/example2.jpg">
+            <img style="width: 100%; height: fit-content;" src="/images/main2.png">
         </div>
-        <!-- <div class="slide">
-            <h2>세 번째 페이지</h2>
-        </div> -->
+        <div class="slide">
+            <img style="width: 100%; height: fit-content;" src="/images/main3.png">
+        </div>
+        <div class="slide">
+            <img style="width: 100%; height: fit-content;" src="/images/main4.png">
+        </div>
     </div>
 
     <script>
