--- a/views/ai_answer.ejs
+++ b/views/ai_answer.ejs
@@ -50,7 +50,7 @@
 
         @font-face {
             font-family: 'neo';
-            src: local('neo'), url('../font/neo.ttf') format('ttf');
+            src: local('neo'), url('/font/neo.ttf') format('ttf');
         }
 
         body {
