--- a/views/ai_token.ejs
+++ b/views/ai_token.ejs
@@ -39,7 +39,7 @@
 
         @font-face {
             font-family: 'neo';
-            src: local('neo'), url('../font/neo.ttf') format('ttf');
+            src: local('neo'), url('/font/neo.ttf') format('ttf');
         }
 
         body {
