--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,7 +12,7 @@
 
         @font-face {
             font-family: 'neo';
-            src: local('neo'), url('../font/neo.ttf') format('ttf');
+            src: local('neo'), url('/font/neo.ttf') format('ttf');
         }
     
         body {
