--- a/views/main.ejs
+++ b/views/main.ejs
@@ -13,7 +13,7 @@
 
         @font-face {
             font-family: 'neo';
-            src: local('neo'), url('../font/neo.ttf') format('ttf');
+            src: local('neo'), url('/font/neo.ttf') format('ttf');
         }
 
         body {
