Fix: download apk

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -41,7 +41,7 @@
             onmouseover="this.style.backgroundColor='#FDBBBB'; this.style.color='black';"
             onmouseout="this.style.backgroundColor='white'; this.style.color='black';">로그인</button>
             <span style="margin: 0 10px;"></span>
-            <a href="./주독야독.zip" download>
+            <a href="/files/app.zip" download>
                 <button type="button" style="border-style: solid; font-size: 20px; color: white; font-weight: bold; background-color: black; border-width: 2px; border-color: white; border-radius: 30px; width: 111px; height: 45px;"
             onmouseover="this.style.backgroundColor='#FDBBBB'; this.style.color='white';"
             onmouseout="this.style.backgroundColor='black'; this.style.color='white';">앱 다운로드</button>
